// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should print matches with largest subexpression in the tree 1`] = `
"
Printing matches for - test/fixtures/match.js

Found 2 matches

Loc - 5 : 5
function f() {}

Loc - 10 : 10
function g() {}


Found 3 matches

Loc - 9 : 11
function test() {
  return function g() {};
}

Loc - 19 : 21
function test1() {
  return function g() {};
}

Loc - 24 : 26
function test2() {
  return function g() {};
}


"
`;

exports[`should print no matches again 1`] = `
"
Printing matches for - test/fixtures/nomatch.js

Found 2 matches

Loc - 5 : 5
function f() {}

Loc - 10 : 10
function g() {}


Found 3 matches

Loc - 9 : 11
function test() {
  return function g() {};
}

Loc - 19 : 21
function test1() {
  return function g() {};
}

Loc - 24 : 26
function test2() {
  return function g() {};
}


Found 2 matches

Loc - 1 : 8
function foo() {
  function aaa() {}

  function d() {
    function e() {
      return \\"asd\\";
    }
  }
}

Loc - 1 : 8
function foo() {
  function aaa() {}

  function d() {
    function e() {
      return \\"asd\\";
    }
  }
}


Found 2 matches

Loc - 10 : 17
function bar() {
  async function aaa() {}

  function d() {
    function e() {
      return \\"10\\";
    }
  }
}

Loc - 10 : 17
function bar() {
  async function aaa() {}

  function d() {
    function e() {
      return \\"10\\";
    }
  }
}


"
`;

exports[`should print no matches found 1`] = `
"No matches found for test/fixtures/nomatch.js
"
`;
